<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手机卫士</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="next">下一步</string>
	<string name="previous">上一步</string>
    <string name="contacts">联系人</string>
    
	
    <!-- home 主页面 -->
    <string name="version">版本号 1.0</string>
    <string name="function">功能列表</string>
    <string name="news">啦啦啦啦，我是卖报的小行家。不怕刮风不怕下雨，啦啦啦啦。，啦啦啦啦。</string>
	<string name="settings">设置中心</string>
	
	<!-- settings 页面 -->
	<string name="set_password">设置密码</string>
	<string name="input_psw">请输入密码</string>
	<string name="input_confirmpsw">请输入确认密码</string>
	<string name="status_ok">确定</string>
	<string name="status_cancle">取消</string>
	<string name="seek_location">选择摆放位置</string>
	
	<!-- setup界面1 -->
	<string name="setup_1">1.欢迎使用手机防盗</string>
	<string name="setup_1_title">您的手机防盗卫士:</string>
	<string name="setup1_c_1">SIM卡变更报警</string>
	<string name="setup1_c_2">GPS追踪</string>
	<string name="setup1_c_3">远程销毁数据</string>
	<string name="setup1_c_4">远程锁屏</string>
	
	<!-- setup界面2 -->
	<string name="setup_2">2.手机卡绑定</string>
	<string name="setup_2_title">通过绑定SIM卡:</string>
	<string name="setup2_c_1">下次重启手机如果发现SIM卡发生变化就会发送报警短信</string>
	<string name="setup2_c_2">点击绑定SIM卡</string>
	
	<!-- setup界面3 -->
	<string name="setup_3">设置安全号码</string>
	<string name="setup_3_title">SIM卡变更后</string>
	<string name="setup3_c_1">报警短信会发送给安全号码</string>
	<string name="choice_contacts">选择联系人</string>
	
	<!-- setup 界面4 -->
	<string name="setup_4">恭喜设置完成</string>
	<string name="set_success">设置完成</string>
	
	<!-- setup 界面5 -->
	<string name="setup_5">手机防盗</string>
	<string name="scurityNumber">安全号码</string>
	<string name="isprotected">防盗保护是否开启</string>
	<string name="setting_again">重新进入设置向导</string>
	<string name="function_introduce">功能简介</string>
	<string name="introduce_1">GPS追踪:#*location*#</string>
	<string name="introduce_2">播放报警音乐:#*alarm*#</string>
	<string name="introduce_3">远程删除数据:#*wipedata*#</string>
	<string name="introduce_4">远程锁屏:#*lockscreen*#</string>
	<string name="to_home">返回主页面</string>
	
	<string name="sample_device_admin_description"></string>
	<string name="sample_device_admin"></string>
	
	
	<!-- function 2 call safe -->
	<string name="callsafe">通讯卫士</string>
	<string name="choice_1">手动输入</string>
	<string name="choice_2">通讯录选择</string>
	<string name="cancle">取消</string>
	
	
	<!-- function 3 app manager -->
	<string name="app_manager">我的软件</string>
	<string name="neicun">内存可用:</string>
	<string name="sd">SD卡可用:</string>
	
	<!-- atools function 8-->
	<string name="atools">高级工具</string>
	<string name="find_phone">电话归属地查询</string>
	<string name="sms_beifen">短信备份</string>
	
	
	<!-- function 8 -1 -->
	<string name="address_title">归属地查询</string>
	<string name="query">查询</string>
	<string name="query_result">查询结果</string>
	<string name="blacknumber">黑名单</string>
	
	<!-- functions 4 -->
	<string name="process">进程管理</string>
	
	<!-- function s 6 -->
	<string name="antiverse">病毒查杀</string>
</resources>
