<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@color/color_color"
        android:gravity="center"
        android:text="@string/set_password"
        android:textSize="@dimen/font_slarge" />

    <EditText
        android:id="@+id/et_passwrod"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/input_psw"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_refirmpsw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/input_confirmpsw"
        android:inputType="textPassword" />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:orientation="horizontal"
	    >
	    <TextView 
	        android:id="@+id/tv_ok"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="fill_parent"
	        android:text="@string/status_ok"
	        android:gravity="center"
	        android:background="@drawable/button_bg"
	        />
	    <TextView 
	        android:id="@+id/tv_cancle"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="fill_parent"
	        android:text="@string/status_cancle"
	        android:gravity="center"
	         android:background="@drawable/button_bg"
	        />
	</LinearLayout>
</LinearLayout>