<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/TitleStyle"
        android:text="@string/setup_1" />

    <TextView
        style="@style/ContentStyle"
        android:text="@string/setup_1_title" />

    <TextView
        style="@style/ContentStyle"
        android:drawableLeft="@android:drawable/star_big_on"
        android:text="@string/setup1_c_1" />

    <TextView
        style="@style/ContentStyle"
        android:drawableLeft="@android:drawable/star_big_on"
        android:text="@string/setup1_c_2" />

    <TextView
        style="@style/ContentStyle"
        android:drawableLeft="@android:drawable/star_big_on"
        android:text="@string/setup1_c_3" />

    <TextView
        style="@style/ContentStyle"
        android:drawableLeft="@android:drawable/star_big_on"
        android:text="@string/setup1_c_4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/setup1" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@drawable/btn_green_normal"
            android:text="@string/next" >
        </Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/presence_online" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/presence_invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/presence_invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/presence_invisible" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>