<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical" >

    <TextView
        style="@style/TitleStyle"
        android:text="@string/setup_5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            style="@style/ContentStyle"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/scurityNumber" />

        <TextView
            android:id="@+id/tv_scuritynumber"
            style="@style/ContentStyle"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="18149184677" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/color_grey" >
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            style="@style/ContentStyle"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/isprotected" />

        <ImageView
            android:id="@+id/iv_isprotected"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/unlock" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/color_grey" >
    </View>

    <TextView
        android:id="@+id/tv_enter_setup1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:text="@string/setting_again"
        android:textSize="21sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/color_grey" >
    </View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_grey"
        android:text="@string/function_introduce"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@android:drawable/star_on" />

        <TextView
            style="@style/ContentStyle"
            android:text="@string/introduce_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@android:drawable/star_on" />

        <TextView
            style="@style/ContentStyle"
            android:text="@string/introduce_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@android:drawable/star_on" />

        <TextView
            style="@style/ContentStyle"
            android:text="@string/introduce_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@android:drawable/star_on" />

        <TextView
            style="@style/ContentStyle"
            android:text="@string/introduce_4" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_back"
        style="@style/ContentStyle"
        android:background="@drawable/button_bg"
        android:text="@string/to_home"
        android:layout_gravity="right"
        android:layout_margin="5dp" />

</LinearLayout>