<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView 
	    style="@style/TitleStyle"
	    android:text="@string/setup_3"
	    />
	<TextView 
	    style="@style/ContentStyle"
	    android:text="@string/setup_3_title"
	    />
	<TextView 
	    style="@style/ContentStyle"
	    android:text="@string/setup3_c_1"
	    />
	<EditText 
	    android:id="@+id/et_phonenumber"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:layout_margin="5dp"
	    android:inputType="phone"
	    />
	<Button 
	    android:id="@+id/btn_getphone"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:text="@string/choice_contacts"
	    android:textColor="@color/color_white"
	    android:background="@drawable/rectagle_btn_bg"
	    />
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/presence_invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/presence_invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/presence_online" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/presence_invisible" />
        </LinearLayout>
        
        <ImageView 
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/setup3"
            android:layout_centerInParent="true"
            />
        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@drawable/btn_green_normal"
            android:text="@string/next" />

        <Button
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:background="@drawable/btn_green_normal"
            android:text="@string/previous" />
    </RelativeLayout>
</LinearLayout>
