<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
        style="@style/TitleStyle"
        android:text="@string/app_manager"
        />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <TextView 
	        android:id="@+id/tv_rom"
	        style="@style/ContentStyle"
	        android:layout_width="0dp"
	        android:layout_margin="5dp"
	        android:layout_weight="1"
	        android:text="@string/neicun"
	        />
	    <TextView 
	        android:id="@+id/tv_sd"
	        android:layout_margin="5dp"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        style="@style/ContentStyle"
	        android:text="@string/sd"
	        />
	</LinearLayout>
	<FrameLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	    <include 
	    android:id="@+id/lv_process"
	    layout="@layout/listview"/>
	
	<TextView 
	    android:id="@+id/tv_alarm"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    />
	</FrameLayout>
	
</LinearLayout>
