<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_tiltle" >

		<ImageView
		    android:id="@+id/iv_back"
		    android:layout_width="30dp"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:src="@drawable/iconfont_miaojiesellerarrowleft" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/atools" />
    </RelativeLayout>
     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tools_button_bg"
        android:drawableLeft="@android:drawable/ic_menu_call"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:onClick="numberAddressQuery"
        android:padding="10dp"
        android:clickable="true"
        android:text="@string/find_phone" />
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@color/color_grey"></View>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/tools_button_bg"
         android:clickable="true"
         android:drawableLeft="@android:drawable/ic_dialog_email"
         android:drawablePadding="5dp"
         android:gravity="center_vertical"
         android:onClick="numberCopy"
         android:padding="10dp"
         android:text="@string/sms_beifen" />
	 <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/tools_button_bg"
         android:clickable="true"
         android:drawableLeft="@drawable/lock"
         android:drawablePadding="5dp"
         android:gravity="center_vertical"
         android:onClick="lockpro"
         android:padding="10dp"
         android:text="程序锁" />
</LinearLayout>